# spotify-recapped

./: .gitignore  LICENSE  README.md  pyproject.toml  spotify_recapped.py
recapped/: spotify_recapped.py
test/: test_spotify_recapped.py
