[project]
name = "spotify-recapped"
version = "0.0.1"
authors = [
  { name="Andrew Huynh", email="saxypandabear@gmail.com" },
]
description = "Analyze your own extended Spotify listening data for fun."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Issues = "https://github.com/SaxyPandaBear/spotify-recapped/issues"
